--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
         <link rel="stylesheet" href="/css/styles.min.css">
     </head>
     <body>
+        <div class="row">
+            <div class="col-md-10">
         <div class="centered-form">
             <div class="centered-form__box">
                 <h1>Join</h1>
@@ -17,6 +19,8 @@
                     <button>Join</button>
                 </form>
             </div>
+        </div>
+        </div>
         </div>
     </body>
 </html>
